# libkbbi

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  configure  cpdeps.sh  libkbbi.pc.in  makefile
.circleci/: config.yml
inc/: libkbbi.h
src/: libkbbi.c  libkbbi.h
test/: Makefile  test.c
